--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0px;
-	background-image: url(e.jpg);
+	background-image: url(https://glalex34.github.io/e.jpg);
 	background-attachment: fixed;
 	background-size: 100% 100%;
 }
