--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ a {
 	color : white;
 	border: 1px solid white;
 	background-color: black;
+	-webkit-user-select: none;
+    	-moz-user-select: none;
+    	-ms-user-select: none;
+   	 user-select: none; 
 }
 
 #hiddenCanv{
