--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
 body {
 	margin: 0px;
-	background-image: url(https://glalex34.github.io/e.jpg);
+	background-image: url(e.jpg);
 	background-attachment: fixed;
 	background-size: 100% 100%;
+}
+
+body::-webkit-scrollbar{
+	display: none;
+}
+
+audio{
+	display: none;
 }
 
 #miniBody{
@@ -12,25 +20,45 @@ body {
 a {
 	text-decoration: none;
 	font-weight: none;
-	color : white;
-	border: 1px solid white;
-	background-color: black;
-	-webkit-user-select: none;
-    	-moz-user-select: none;
-    	-ms-user-select: none;
-   	 user-select: none; 
+	-webkit-user-select: none; /* Safari 3.1+ */
+    -moz-user-select: none; /* Firefox 2+ */
+    -ms-user-select: none; /* IE 10+ */
+    user-select: none; /* Standard syntax */;
 }
 
 #hiddenCanv{
-	
+	display: none;
 }
 
 form {
-	color : white;
+	width: 35%;
+	height: 50px;
+	margin-left: auto;
+	margin-right: auto;
+	background: #33B0E8;
+	border-radius: 55px 55px 55px 55px;
+	color: blue;
+	box-shadow: 3px 3px #46FCFF;
+	text-shadow: 1px 1px #46FCFF;
+	opacity: 0.7;
+}
+
+#toolbarOpt{
+	border: 1px solid gray;
+	background: white;
+}
+
+form:hover{
+	opacity: 1;
+}
+
+form > *{
+	text-align: center;
+	margin-top: 14px;
 }
 
 #commands{
-	color: white;
+	color: blue;
 }
 
 #commStyle{
@@ -45,8 +73,30 @@ form {
 	box-shadow: 3px 3px #46FCFF;
 }
 
+#toolPoz{
+	margin-left: 55px;
+	position: absolute;
+	z-index: 2;
+	position: fixed;
+}
+
+#toolPoz > * {
+	border: 1px solid gray;
+	background: #33B0E8;
+	opacity: 0.7;
+	color: blue;
+	box-shadow: 3px 3px #46FCFF;
+	width: 200px;
+	display: block;
+	border-radius: 25px 25px 25px 25px;
+}
+
+#toolPoz > *:hover{
+	opacity: 1;
+}
+
 #titlePoz {
-	padding-top: 35px;
+	padding-top: 30px;
 	margin-left: auto;
 	margin-right: auto;
 	width: 50%;
@@ -65,10 +115,32 @@ form {
 	text-shadow: 2px 2px #46FCFF;
 }
 
-canvas {
+#titlePoz > *:hover{
+	opacity: 1;
+}
+
+#commStyle:hover{
+	opacity: 1;
+}
+
+#myCanvas {
 	position: absolute;
 	z-index: -1;
 	width: 100%;
+	overflow: hidden;
+}
+
+#hiddenMessage{
+	display: none;
+	width: 40%;
+	margin-left: auto;
+	margin-right: auto;
+	border: 2px solid gray;
+	background: #33B0E8;
+}
+
+#incerc{
+	
 }
 
 h2 {
@@ -77,19 +149,20 @@ h2 {
 	margin-right: auto;
 	width: 75%;
 	opacity: 0.8;
-	color: white;
+	color: #33B0E8;
 }
 
-table,
-tr,
 td {
     border: 1px solid black;
 }
 
 table {
+	margin-bottom: 55px;
     border-collapse: collapse;
-    margin: 0 auto;
+    margin-left: auto;
+	margin-right: auto;
 	opacity: 0.7;
+	display: none;
 }
 
 input{
