--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,8 @@ form > *{
 	color: blue;
 	box-shadow: 3px 3px #46FCFF;
 	width: 200px;
-	height: 5px;
+	height: 30px;
+	margin-bottom: 5px;
 	display: block;
 	border-radius: 25px 25px 25px 25px;
 }
