--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,8 @@ a {
 }
 
 form {
-	width: 35%;
-	height: 50px;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 25%;
+	margin-right: 25%;
 	background: #33B0E8;
 	border-radius: 55px 55px 55px 55px;
 	color: blue;
@@ -59,6 +57,7 @@ form:hover{
 form > *{
 	text-align: center;
 	margin-top: 14px;
+	marging-bottom: 12px;
 }
 
 #commands{
